# MiniRPC

./: .gitignore  README.md
Client/: MiniRPC.sln
Client/MiniRPC/: MiniRPC.cpp  MiniRPC.h  MiniRPC.vcxproj  MiniRPC.vcxproj.filters  RpcCallback.h  RpcHeader.h  RpcResponse.h  Utils.h  main.cpp
Server/minirpc_server/: Cargo.toml
Server/minirpc_server/src/: credentials.rs  main.rs  minirpc_server.rs
Server/minirpc_server/src/minirpc_server/: client.rs
