[package]
name = "minirpc_server"
version = "0.1.0"
authors = ["ApourtArtt <47370292+ApourtArtt@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1.0.1"
tokio = {version = "^1.2.0", features = ["full"]}
tokio-util = {version = "^0.6.3", features = ["full"]}
tokio-stream = "^0.1.3"
futures = "^0.3.13"